fixed spacing for menu items and deleted class named padding

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -119,11 +119,8 @@ h1 {
     height: 300px;
 }
 
-.padding {
-  padding-bottom: 5px;
-  padding-right: 5px;
-  padding-left: 5px;
-  padding-top: 5px;
+.menu{
+  margin: 1%;
 }
 
 .card-body {
